tests/errors/tc_mem_alias_uaf.lx
@module "main"

pub const main -> fn () int {
    let p: *int = cast<*int>(alloc(sizeof<int>));
    let q: *int = p;
    free(p);
    *q;
    return 0;
}
